# Connect4

./: .gitignore  AIAgents.md  CLAUDE.md  Connect4Plan.md  README.md  main.py  pyproject.toml
checkpoints/alphazero/: best.pt
connect4/: board.py  board_test.py  game.py
connect4/gui/: pygame_gui.py
connect4/leaderboard/: __init__.py  __main__.py  agents.py  matchup.py
connect4/players/: base.py  epsilon_greedy_player.py  epsilon_greedy_player_test.py  greedy_player.py  greedy_player_test.py  human.py  random_player.py
connect4/players/rl/: common.py  common_test.py  networks.py  networks_test.py  self_play_env.py  self_play_env_test.py
connect4/players/rl/alphazero/: alphazero_player.py  mcts.py  mcts_test.py
connect4/players/rl/dqn/: dqn_player.py
connect4/players/rl/ppo/: ppo_player.py
connect4/training/: evaluate.py  opponents.py  per_buffer.py  rewards.py  train_alphazero.py  train_dqn.py  train_ppo.py
docs/: index.html  lessons_of_rl_agents.md
docs/play/: index.html
docs/play/assets/: index-BqPMcP3V.css  index-Ck0nxY8L.js
docs/play/models/: alphazero.onnx
scripts/: dump_canonical_fixtures.py  dump_mcts_fixtures.py  dump_nn_fixtures.py  export_onnx.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  style.css
web/src/engine/: board.test.ts  board.ts
web/src/players/: base.ts  canonicalize.test.ts  canonicalize.ts  dqn.ts  greedy.test.ts  greedy.ts  nn.test.ts  nn.ts  ppo.ts  random.ts
web/src/ui/: game.ts  opponents.ts  ort-loader.ts  view.ts
(+6 files in other folders)
